Fixed location search bar on small screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -474,13 +474,18 @@ body > header {
 }
 @media all and (max-width: 500px) {
 	body > header .top-bar {
-		height: 5em;
-		line-height: 5em;
+		height: 5.2em;
+		line-height: 5.2em;
 	}
 		body.installed-app > header .top-bar {
-			height: 5.5em;
+			height: 5.7em;
 		}
-
+   .location-search {
+      padding-top: 5.2em;
+   }
+      .installed-app .location-search {
+         padding-top: 5.7em;
+      }
 	body > header .main-btn span {
 		font-size: 1.2em;
 	}
@@ -489,10 +494,10 @@ body > header {
 		font-size: 0.8em;
 	}
 	.main {
-		height: calc(100% - 5em);
+		height: calc(100% - 5.2em);
 	}
 		.installed-app .main {
-			height: calc(100% - 5.5em);
+			height: calc(100% - 5.7em);
 		}
 	.modal-content {
 		margin: 0;
